2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: All error reporting method calls are 
	renewed.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: All error type names and "text" parameters
	are revised.  Use new style for "level" specification.

	* mkhtmlparser.pl: Use new style for "level" specification.

2008-08-03  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm (parse_char_string): Simplified error
	reporting process for broken ignored valuetype definition.
	(Valuetype idl_text): Support for special "DOMString" name.

2008-08-03  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm ($get_scoped_name): Append "::::" if the last
	terminal of the ScopedName is "DOMString", such that whether
	the last part of the scoped name is "DOMString" or "_DOMString"
	later.  It is necessary to determine whether a |typedef|
	definition should be ignored or not.
	(parse_char_string): Unescape the identifier of
	exception members.
	($resolve): Return undef for builtin types and sequence<T>
	types (we might not have to do this, however...).
	(check): Support checking for Exceptions, Valuetypes,
	and Typedefs.
	($serialize_type): Support for "DOMString::::" syntax.
	(Typedef idl_text): Output Type as "DOMString" if it
	is really "DOMString" (i.e. its internal representation
	is "::DOMString::").

2008-08-03  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm ($resolve): New code, based on resolve code
	for constant types in the |check| method.
	(check): Support for checking of attributes, operations, and
	arguments.
	(Attribute/Operation idl_text): Exception names in getraises,
	setraises, and raises clauses is serizlied by |$serialize_type|
	code.

2008-08-02  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm ($integer): Order of selections are changed to match
	hexadecimal numbers (the original pattern, taken from the spec,
	was not work for hexadecimal numbers, because the "0" prefix
	matches to the [0-7]* part (as an empty string) and therefore