@@ -1,5 +1,9 @@
 2008-08-15  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm: Mark HTML4's "fact"-level errors as such.  Typo fixed.
+
+2008-08-15  Wakaba  <wakaba@suika.fam.cx>
+
 	* Atom.pm, HTML.pm: All error reporting method calls are
 	revised.
 
