@@ -1,5 +1,12 @@
 2008-08-15  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm: Support for RDF/XML error levels.
+
+	* HTMLTable.pm, RDFXML.pm: Support for new style of error level
+	specifying.  Error types are revised.
+
+2008-08-15  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm: All error reporting method calls are 
 	renewed.
 
